<resources>
    <string name="app_name">Modul05</string>
    <string name="id">Id</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="view_all">View All</string>
    <string name="move_to_API">Pindah ke Halaman API</string>
    <string name="email">Email</string>
</resources>